k8-resources/12-pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret-demo
  labels:
    purpose: secret-access
spec:
  containers:
  - name: nginx
    image: nginx
