k8-resources/14-node.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-np 
  labels:
    purpose: service-np-demo
spec:
  type: NodePort
  selector:
    purpose: service-np-demo
    project: roboshop
    environment: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-np
  labels:
    purpose: service-np-demo
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx
