k8-resources/15-load.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-load
  labels: 
    purpose: service-lb-demo
spec:
  type: LoadBalancer
  selector:
    purpose: service-lb-demo
    project: roboshop
    environment: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-load
  labels:
    purpose: service-lb-demo
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx
