k8-resources/20-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: roboshop
spec:
  podSelector:
    matchLabels:
      tier: database
      component: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
           component: catalogue
           project: roboshop
           tier: app
    ports:
    - protocol: TCP
      port: 27017
